# dene_old

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
examples/: hello_world.rs
src/: action.rs  app.rs  element.rs  elements.rs  entity.rs  event.rs  executor.rs  focus.rs  frame.rs  geometry.rs  global.rs  interactive.rs  key_dispatch.rs  keybind.rs  layout.rs  lib.rs  panel.rs  style.rs  subscribtion.rs  terminal.rs  view.rs  window.rs
src/app/: async_app.rs
src/elements/: div.rs  empty.rs  input.rs  text.rs
src/elements/input/: actions.rs  state.rs
