# SPDX-License-Identifier: Apache-2.0

[package]
name = "dene"

authors = ["Alibek<freed.alibek@gmail.com>"]

edition = "2024"
version = "0.1.0"

description = ""
# keywords = []
# categories = []

# homepage = ""
repository = "https://github.com/lolp1ke/qara"
# documentation = ""
readme = "README.md"
license-file = "LICENSE-APACHE"

# include = []
# exclude = []

rust-version = "1.94.0"

[lib]
required-features = ["default"]

[features]
default = [
  "crossterm",
  "derive_more",
  "rustc-hash",
  "serde",
  "toml",
  "taffy",
  "tokio",
  "futures-util",
]

crossterm = ["crossterm/event-stream"]
derive_more = [
  "derive_more/debug",
  "derive_more/deref",
  "derive_more/deref_mut",
]
futures-util = ["futures-util/alloc"]
rustc-hash = ["rustc-hash/std"]
serde = ["serde/derive", "serde/std"]
taffy = ["taffy/taffy_tree", "taffy/flexbox", "taffy/block_layout", "taffy/grid", "taffy/std"]
tokio = [
  "tokio/sync",
  "tokio/time",
  "tokio/macros",
  "tokio/rt",
  "tokio/rt-multi-thread",
]
toml = ["toml/serde", "toml/parse"]

[dependencies]
anyhow = { version = "1.0.103", default-features = false }
async-task = { version = "4.7.1", default-features = false }
bitflags = { version = "2.11.1", default-features = false }
crossterm = { version = "0.29.0", default-features = false }
derive_more = { version = "2.1.1", default-features = false }
futures-util = { version = "0.3.32", default-features = false }
inventory = { version = "0.3.24", default-features = false }
parking_lot = { version = "0.12.5", default-features = false }
rustc-hash = { version = "2.1.2", default-features = false }
serde = { version = "1.0.228", default-features = false }
slotmap = { version = "1.1.1", default-features = false }
smallvec = { version = "1.15.1", default-features = false }
taffy = { version = "0.10.1", default-features = false }
tokio = { version = "1.52.3", default-features = false }
toml = { version = "1.1.2", default-features = false }
tracing = { version = "0.1.44", default-features = false }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"


[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
